estream.c dummy_mutex_call types
Closed, ResolvedPublic

Assigned To
Authored By
mwarner
Nov 6 2013, 12:16 AM
Subscribers

Description

There are a couple of simple errors in estream.c that prevent compilation on
certain platforms (I'm using the Solaris Studio compiler). The issue is that the
wrong "dummy_mutex" type is being used. The fix is trivial. Please update the code
to reflect this fix.

Thanks!

diff estream.c estream.c.orig

184c184

< (estream_pth_killed ? dummy_mutex_call_int ((mutex)) \

(estream_pth_killed ? dummy_mutex_call_void ((mutex))         \

190c190

< (estream_pth_killed ? dummy_mutex_call_int ((mutex)) \

(estream_pth_killed ? dummy_mutex_call_void ((mutex))         \

Details

Version
2.0.22

Event Timeline

mwarner set Version to 2.0.22.
mwarner added a subscriber: mwarner.
werner claimed this task.

Fixed with commit 571bcd4. Thanks.